log/build_2025-05-25_15-45-43/my_robot_pkg/stderr.log
  File "/home/futill/targer_ws/install/my_robot_pkg/lib/python3.10/site-packages/my_robot_pkg/arm_move.py", line 99
    elif action[0] == 'chess':
    ^^^^
SyntaxError: invalid syntax

